# ppgso

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  bmp.h  gl_animate.cpp  gl_gradient.cpp  gl_gradient.frag  gl_gradient.vert  gl_objects.cpp  gl_projection.cpp  gl_projection.vert  gl_texture.cpp  gl_texture.frag  gl_texture.vert  gl_transform.cpp  gl_transform.vert  object_3d.cpp  object_3d.h  raw_gradient.cpp  tga.h  tiny_obj_loader.cpp
cmake/: bin2c.cmake  shaders.cmake
data/: asteroid.rgb  corsair.rgb  explosion.rgb  missile.rgb  missile2.mtl  sphere.rgb  stars.rgb
include/: mesh.h  shaderprogram.h  tga.h
ppgso/: image.cpp  image_bmp.cpp  image_raw.cpp  mesh.cpp  ppgso.h  shader.cpp  shader.h  texture.cpp  window.cpp  window.h
shader/: color_vert.glsl
shaders/: gl_gradient.frag  gl_texture.vert
src/: gl_texture.cpp
src/gl1_gradient/: gl1_gradient.cpp  gl1_gradient_frag.glsl
src/gl2_texture/: gl2_texture.cpp  gl2_texture_vert.glsl
src/gl3_animate/: gl3_animate.cpp
src/gl4_transform/: gl4_transform.cpp  gl4_transform_vert.glsl
src/gl5_projection/: gl5_projection.cpp
src/gl6_mesh/: gl6_mesh.cpp
src/gl7_diffuse/: gl7_diffuse.cpp
src/gl8_framebuffer/: gl8_framebuffer.cpp
src/gl9_scene/: asteroid.cpp  asteroid.h  camera.cpp  camera.h  explosion.cpp  explosion.h  explosion_frag.glsl  generator.cpp  generator.h  gl9_scene.cpp  object.cpp  object.h  player.cpp  player.h  projectile.cpp  projectile.h  scene.cpp  scene.h  space.cpp  space.h  space_frag.glsl
src/gl_animate/: gl_animate.cpp  gl_animate_frag.glsl
src/gl_diffuse/: gl_diffuse.cpp  gl_diffuse_frag.glsl  gl_diffuse_vert.glsl
src/gl_framebuffer/: gl_framebuffer.cpp
src/gl_gradient/: gl_gradient.cpp  gl_gradient_frag.glsl  gl_gradient_vert.glsl
src/gl_mesh/: gl_mesh.cpp
src/gl_projection/: gl_projection.cpp  gl_projection_vert.glsl
src/gl_scene/: asteroid.cpp  asteroid.h  camera.cpp  camera.h  explosion.cpp  explosion.h  generator.cpp  generator.h  gl_scene.cpp  object.cpp  object.h  object_frag.glsl  player.cpp  player.h  projectile.cpp  projectile.h  scene.cpp  scene.h  space.cpp  space.h  space_vert.glsl
src/gl_texture/: gl_texture.cpp
src/gl_transform/: gl_transform.cpp  gl_transform_vert.glsl
src/lib/: mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  tga.cpp  tga.h  tiny_obj_loader.cpp  tiny_obj_loader.h
src/lib/ppgso/: mesh.cpp  mesh.h  ppgso.h  shader.cpp  shader.h  texture.cpp  texture.h  tiny_obj_loader.cpp  window.cpp  window.h
src/playground/: playground.cpp
src/raw1_gradient/: raw1_gradient.cpp
src/raw2_raycast/: raw2_raycast.cpp
src/raw3_raytrace/: raw3_raytrace.cpp
src/raw4_raster/: raw4_raster.cpp
src/raw_gradient/: raw_gradient.cpp
src/task1_filter/: task1_filter.cpp
src/task1_invert/: task1_invert.cpp
src/task2_bresenham/: task2_bresenham.cpp
src/task2_convolution/: task2_convolution.cpp
src/task3_bezier/: task3_bezier.cpp  task3_bezier_frag.glsl  task3_bezier_vert.glsl
src/task3_bresenham/: task3_bresenham.cpp
src/task4_bezier/: task4_bezier.cpp
src/task4_convolution/: task4_convolution.cpp  task4_convolution_frag.glsl
src/task5_2dshapes/: task5_2dshapes.cpp  task5_2dshapes_frag.glsl  task5_2dshapes_vert.glsl
src/task6_bezier_surface/: task6_bezier_surface.cpp
src/task7_dynamic_surface/: task7_dynamic_surface.cpp  task7_dynamic_surface_frag.glsl  task7_dynamic_surface_vert.glsl
src/task7_particles/: task7_particles.cpp
